fix: add intl and zip PHP extensions to GitLab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,8 @@ lint:
   stage: lint
   image: php:${PHP_VERSION}-cli-alpine
   before_script:
-    - apk add --no-cache git unzip curl
+    - apk add --no-cache git unzip curl icu-dev libzip-dev $PHPIZE_DEPS
+    - docker-php-ext-install intl zip
     - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
     - composer install --prefer-dist --no-progress --no-interaction
   script:
@@ -57,7 +58,8 @@ static-analysis:
   stage: analyze
   image: php:${PHP_VERSION}-cli-alpine
   before_script:
-    - apk add --no-cache git unzip curl
+    - apk add --no-cache git unzip curl icu-dev libzip-dev $PHPIZE_DEPS
+    - docker-php-ext-install intl zip
     - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
     - composer install --prefer-dist --no-progress --no-interaction
     - cp .env.example .env
@@ -93,8 +95,8 @@ tests:
     REDIS_HOST: redis
     REDIS_PORT: 6379
   before_script:
-    - apk add --no-cache git unzip curl nodejs npm postgresql-dev linux-headers $PHPIZE_DEPS
-    - docker-php-ext-install pdo pdo_pgsql
+    - apk add --no-cache git unzip curl nodejs npm postgresql-dev linux-headers icu-dev libzip-dev $PHPIZE_DEPS
+    - docker-php-ext-install pdo pdo_pgsql intl zip
     - pecl install redis && docker-php-ext-enable redis
     - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
     - composer install --prefer-dist --no-progress --no-interaction
