--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,7 +105,7 @@ tests:
     - cp .env.example .env
     - php artisan key:generate
   script:
-    - vendor/bin/pest
+    - php -d memory_limit=512M vendor/bin/pest
   cache:
     - <<: *composer-cache
     - <<: *npm-cache
